--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Buget</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=4" />
   <link rel="manifest" href="manifest.webmanifest">
 <meta name="theme-color" content="#0b252b">
 </head>
@@ -135,4 +135,5 @@
 </script>
 </body>
 </html>
+
 
